[tool.poetry]
name = "webhomework-11"
version = "0.1.0"
description = ""
authors = ["HMixany <hmixany@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
pydantic = {extras = ["email"], version = "^2.6.1"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
